# fav_idol

./: .gitignore  README.md  celery.py  celery_app.py  pyproject.toml  test.sh
.github/workflows/: checks.yaml
Accounts/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
Accounts/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_is_superuser_and_more.py  0002_alter_user_username.py
Idols/: admin.py  apps.py  models.py  permissions.py  s3_utils.py  serializers.py  tests.py  urls.py  views.py
Idols/migrations/: 0001_initial.py  0002_alter_agency_image.py  0002_alter_agency_image_alter_group_color_and_more.py  0002_alter_agency_image_ext_alter_agency_image_name_and_more.py  0002_group_manager_alter_agency_image_alter_group_color_and_more.py  0003_alter_group_color_alter_group_image_alter_idol_image.py  0003_remove_agency_image_ext_remove_agency_image_name_and_more.py  0004_alter_group_color.py  0005_alter_group_manager.py
Preferences/: admin.py  apps.py  models.py  notification_service.py  notification_task.py  serializers.py  services.py  tests.py  urls.py  views.py
Preferences/migrations/: 0001_initial.py
Schedules/: admin.py  apps.py  models.py  permissions.py  serializer.py  swagger_schema.py  tests.py  urls.py  views.py
Schedules/migrations/: 0001_initial.py
config/: base_exception.py  dev.py  logging.py  permissions.py  prod.py  settings.py  urls.py
ilog/: apps.py
templates/: email_verification.html  password_reset_email.html  schedule_notification.html
tests/: test_views.py
